# chip8-emulator

./: .gitignore  Cargo.toml  Makefile  README.md
config/: development.yaml
configs/: config.yaml  test.yaml
crates/libs/chip8/: Cargo.toml
crates/libs/chip8/src/: lib.rs
crates/libs/chip8/src/config/: config.rs  environment.rs  error.rs
crates/libs/chip8/src/core/: chip8.rs  cpu.rs  cpu_controller.rs  display.rs  display_controller.rs  emulator.rs  instruction.rs  memory_controller.rs  mod.rs
crates/libs/chip8/src/shared/: mod.rs
crates/libs/chip8/src/shared/config/: config.rs  environment.rs  mod.rs
crates/libs/chip8/src/shared/ctx/: ctx.rs  mod.rs
crates/libs/chip8/src/shared/data/: bit.rs  logic.rs  math_2d.rs  mod.rs  string.rs
crates/libs/chip8/src/shared/helper/: mod.rs
crates/libs/chip8/src/shared/logger/: logger.rs
crates/libs/chip8_core/: Cargo.toml
crates/libs/chip8_core/src/: lib.rs  memory.rs  memory_controller.rs
crates/libs/display/: Cargo.toml
crates/libs/display/src/: lib.rs
crates/libs/display/src/sdl/: context.rs  controller.rs  mod.rs  window.rs
crates/libs/shared/: Cargo.toml
crates/libs/shared/src/: lib.rs
crates/libs/shared/src/config/: config.rs  environment.rs
crates/libs/shared/src/data/: mod.rs
crates/libs/shared/src/helper/: renderer.rs
crates/libs/shared/src/logger/: logger.rs
crates/services/desktop/: Cargo.toml
crates/services/desktop/src/: main.rs
