[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared/" }
anyhow = "1.0.89"
dotenvy = "0.15.7"
serde = "1.0.204"
serde_derive = "1.0"
serde_variant = "0.1.3"
serde_json = "1.0.128"
tracing = "0.1.40"
lazy_static = "1.5.0"
serde_yaml = "0.9.34" # Deprecated metadata kaldırıldı
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "time",
] }
tracing-appender = "0.2.3"
thiserror = "1.0.64"
rand = "0.8.5"
log = "0.4.22"
