[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_variant = "0.1.3"
serde_json = "1.0.128"
sdl2 = { version = "0.37.0", features = ["image"] }
lazy_static = "1.5.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "time",
] }
tracing-appender = "0.2.3"
thiserror = "1.0.64"
rand = "0.8.5"
log = "0.4.22"
tera = "1.20.0"
